--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mybulma",
   "version": "1.0.0",
   "description": "",
-  "main": "dist.sass.mystyles.scss",
+  "main": "src/sass/index.scss",
   "dependencies": {
     "bulma": "^0.9.0",
     "jest": "^26.4.2",
@@ -10,6 +10,9 @@
   },
   "devDependencies": {},
   "scripts": {
+    "css-build": "node-sass --omit-source-map-url src/sass/index.scss src/css/styles.css",
+    "css-watch": "npm run css-build -- --watch",
+    "start": "npm run css-watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
